--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "@vapi-ai/server-sdk": "^0.7.0",
-    "dotenv": "^16.5.0"
+    "dotenv": "^16.5.0",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7"
   }
 }
